--- a/app/src/main/res/layout/activity_daily_bazar_spend.xml
+++ b/app/src/main/res/layout/activity_daily_bazar_spend.xml
@@ -7,35 +7,30 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.simplifiedcoding.mysqlcrud.MonthlyExpenseActivity">
+    tools:context="net.simplifiedcoding.mysqlcrud.DailyBazarSpend">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Monthly Expense"
-        android:id="@+id/textViewMExpense"
-        android:layout_marginTop="36dp"
+        android:text="Spend"
+        android:id="@+id/textViewBSpend"
+        android:layout_marginLeft="49dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="67dp"
         android:textSize="20dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <ScrollView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollViewMonthlyExpense"
-        android:layout_below="@+id/textViewMExpense"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="31dp"
-        android:layout_alignParentBottom="true"
+        android:id="@+id/editTextDBazarSpend"
+        android:layout_alignTop="@+id/textViewBSpend"
+        android:layout_toRightOf="@+id/textViewBSpend"
+        android:layout_marginLeft="39dp"
+        android:layout_marginStart="39dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:fillViewport="false" >
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/listViewMonthlyExpense"
-            android:choiceMode="singleChoice" />
-    </ScrollView>
+        android:layout_marginRight="15dp" />
 </RelativeLayout>
