--- a/app/src/main/res/layout/activity_register_mess.xml
+++ b/app/src/main/res/layout/activity_register_mess.xml
@@ -7,6 +7,32 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".RegisterMess">
+    tools:context=".CreateMess">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create"
+        android:id="@+id/buttonMessRegCreate"
+        android:layout_marginTop="95dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="JOIN"
+        android:id="@+id/buttonMessRegJoin"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OR"
+        android:id="@+id/textView"
+        android:layout_above="@+id/buttonMessRegJoin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="26dp"
+        android:textSize="20dp" />
 </RelativeLayout>
