--- a/app/src/main/res/layout/activity_bazar_chart_view.xml
+++ b/app/src/main/res/layout/activity_bazar_chart_view.xml
@@ -7,35 +7,36 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.simplifiedcoding.mysqlcrud.MonthlyExpenseActivity">
+    tools:context="net.simplifiedcoding.mysqlcrud.BazarChartView">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Monthly Expense"
-        android:id="@+id/textViewMExpense"
-        android:layout_marginTop="36dp"
-        android:textSize="20dp"
+        android:text="Bazar Chart"
+        android:id="@+id/textViewBChart"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="94dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="26dp"
+        android:textSize="20dp" />
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollViewMonthlyExpense"
-        android:layout_below="@+id/textViewMExpense"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="31dp"
+        android:id="@+id/scrollView2"
+        android:layout_below="@+id/textViewBChart"
+        android:layout_marginTop="36dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:fillViewport="false" >
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" >
 
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/listViewMonthlyExpense"
-            android:choiceMode="singleChoice" />
+            android:id="@+id/listView2" />
     </ScrollView>
 </RelativeLayout>
