--- a/app/src/main/res/layout/activity_create__mess.xml
+++ b/app/src/main/res/layout/activity_create__mess.xml
@@ -9,4 +9,34 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CreateMess">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create"
+        android:id="@+id/buttonMessRegCreate"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="75dp"
+        android:layout_alignLeft="@+id/buttonMessRegCreate"
+        android:layout_alignStart="@+id/buttonMessRegCreate"
+        android:hint="Mess Name"
+        android:inputType="text" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText2"
+        android:layout_below="@+id/editText"
+        android:layout_alignLeft="@+id/editText"
+        android:layout_alignStart="@+id/editText"
+        android:layout_marginTop="34dp"
+        android:hint="Total Member"
+        android:inputType="number" />
+
 </RelativeLayout>
