--- a/app/src/main/res/layout/activity_join__mess.xml
+++ b/app/src/main/res/layout/activity_join__mess.xml
@@ -9,4 +9,45 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".JoinMess">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextMessSearch"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="42dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="40dp"
+        android:hint="Enter Mess Name To Search" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search"
+        android:id="@+id/buttonMessSearch"
+        android:layout_below="@+id/editTextMessSearch"
+        android:layout_alignRight="@+id/editTextMessSearch"
+        android:layout_alignEnd="@+id/editTextMessSearch"
+        android:layout_marginTop="40dp" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_below="@+id/buttonMessSearch"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="33dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" >
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listViewMessSearchResult"
+            android:choiceMode="singleChoice" />
+    </ScrollView>
 </RelativeLayout>
